returning products names added

--- a/products/templates/index.html
+++ b/products/templates/index.html
@@ -16,8 +16,8 @@
 
 <div class="row">
     {% for product in products %}
-    <div class="col">
-        <div class="card" style="width: 18rem;">
+    <div class="col" style="height: 20rem;">
+        <div class="card" style="width: 18rem; ">
             <img src="{{product.image_url}} "   class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">{{product.name}}</h5>
